# machine-learning

./: README.md  pyproject.toml  sync_server.sh
machine_learning/: main.py
