[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "machine_learning"}]

[tool.poetry.dependencies]
python = "^3.11"
# bitsandbytes = "^0.43.0"
bitsandbytes = "^0.43.0"
transformers = {git = "https://github.com/huggingface/transformers.git"}
peft = {git = "https://github.com/huggingface/peft.git"}
accelerate = {git = "https://github.com/huggingface/accelerate.git"}
trl = "^0.8.1"
xformers = "^0.0.25.post1"
wandb = "^0.16.5"
datasets = "^2.18.0"
einops = "^0.7.0"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
